--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- <li>Roll 1: <span>&#9856;</span></li>
       <li>Roll 2: <span>&#9860;</span></li> -->
     </ul>
-    <script src="index.js"></script>
+    <script src="script/index.js"></script>
 </body>
 
 </html>
